--- a/fake_data_generator.ipynb
+++ b/fake_data_generator.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Methods for Generate Fake Data using CTGAN"
+    "# Methods to Generate Fake Data using CTGAN"
    ]
   },
   {
